exports[`test last-line-0.js 1`] = `
"\'use strict\';~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\"use strict\";
"
`;

exports[`test last-line-0.js 2`] = `
"\'use strict\';~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\"use strict\";
"
`;

exports[`test last-line-1.js 1`] = `
"\'use strict\';
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\"use strict\";
"
`;

exports[`test last-line-1.js 2`] = `
"\'use strict\';
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\"use strict\";
"
`;

exports[`test last-line-2.js 1`] = `
"\'use strict\';

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\"use strict\";
"
`;

exports[`test last-line-2.js 2`] = `
"\'use strict\';

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\"use strict\";
"
`;

exports[`test newline.js 1`] = `
"/* @flow */

\"use strict\";

import a from \"a\";

a();
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/* @flow */

\"use strict\";

import a from \"a\";

a();
"
`;

exports[`test newline.js 2`] = `
"/* @flow */

\"use strict\";

import a from \"a\";

a();
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/* @flow */

\"use strict\";

import a from \"a\";

a();
"
`;

exports[`test no-newline.js 1`] = `
"\"use strict\";
a
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\"use strict\";
a;
"
`;

exports[`test no-newline.js 2`] = `
"\"use strict\";
a
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\"use strict\";
a;
"
`;

exports[`test test.js 1`] = `
"\"use strict\";

function fn() {
  \"use strict\";
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\"use strict\";

function fn() {
  \"use strict\";
}
"
`;

exports[`test test.js 2`] = `
"\"use strict\";

function fn() {
  \"use strict\";
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\"use strict\";

function fn() {
  \"use strict\";
}
"
`;
